--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
              <header>
 
-                <a href="#"><img src="ima/IMG_20240324_211239.jpg" alt="creator logo"></a>
+                <a href="#"><img src="IMG_20240324_211239.jpg" alt="creator logo"></a>
 
                 <h1>HOW TO HACK WHATSAPP ACCOUNT IN 5 MINUTES</h1>
 
